# polly

./: .gitignore  CLAUDE.md  README.md  prompt_generator_prd.md  pyproject.toml
.claude/: claude_agent_sdk_guide.md
feature_breakdown_agent/: __init__.py  coordinator_prompt.py  display.py  feature_breakdown_agent.py  future_feature_template.py  prompt_template.py
feature_breakdown_agent/skills/feature-discovery/: SKILL.md  feature-template.md  future-feature-template.md
feature_breakdown_agent/skills/feature-identification/: SKILL.md  future-feature-template.md
feature_breakdown_agent/skills/iteration-breakdown/: SKILL.md  increments-template.md
feature_breakdown_agent/skills/prompt-generation/: SKILL.md  prompt-template.md
test_project/features/: auth.md  profile.md  search.md
tests/: conftest.py  test_coordinator_prompt.py  test_display.py  test_phase_0.py  test_phase_1.py  test_skills_structure.py
