[project]
name = "feature-breakdown-agent"
version = "0.1.0"
description = "A terminal-based AI agent that transforms high-level feature descriptions into detailed, incremental coding prompts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anyio>=4.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
feature-breakdown-agent = "feature_breakdown_agent.feature_breakdown_agent:main"

[tool.setuptools.packages.find]
include = ["feature_breakdown_agent*"]
exclude = ["tests*", "test_project*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (may be slow)",
    "unit: marks tests as unit tests (fast)",
]
